tests/rustdoc-ui/intra-doc/ty-alias-field.stderr
error: unresolved link to `Self::a::b`
  --> $DIR/ty-alias-field.rs:4:6
   |
LL | /// [Self::a::b]
   |      ^^^^^^^^^^ the struct `MyStruct` has no field or associated item named `a`
   |
note: the lint level is defined here
  --> $DIR/ty-alias-field.rs:1:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unresolved link to `Self::a::b`
  --> $DIR/ty-alias-field.rs:8:6
   |
LL | /// [Self::a::b]
   |      ^^^^^^^^^^ the type alias `MyAlias` has no associated item named `a`

error: aborting due to 2 previous errors

